--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "firebase": "^5.3.1",
     "history": "^4.7.2",
     "lodash": "^4.17.10",
     "loglevel": "^1.6.1",
@@ -19,7 +20,7 @@
     "reselect": "^3.0.1"
   },
   "scripts": {
-    "prettier-all": "./node_modules/.bin/prettier --write \"./{src,public}/**/*.{js,scss,json}\"",
+    "prettier-all": "./node_modules/.bin/prettier --write \"./{src,functions,public}/**/*.{js,scss,json}\"",
     "analyze": "./node_modules/.bin/source-map-explorer build/static/js/main.*",
     "clean-css": "find ./src -name \"*.css\" -type f -delete",
     "start-css": "npm run build-css && npm run build-css -- --watch --recursive",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "firebase-tools": "^4.0.2",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "prettier": "1.13.7",
